k8s/service.poc.example.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-app
  namespace: default
  labels:
    app: poc-app
spec:
  selector:
    app: poc-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
